# django-htmx-starterkit

./: .dockerignore  .env.template  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  docker-compose.yml.bak  pyproject.toml
apps/accounts/: admin.py  forms.py  models.py  urls.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templates/account/: login.html  signup.html
apps/main/: urls.py  views.py
apps/main/templates/main/: about.html  index.html
apps/tasks/: admin.py  forms.py  models.py  urls.py  views.py
apps/tasks/migrations/: 0001_initial.py
apps/tasks/templates/tasks/: index.html
apps/tasks/templates/tasks/partials/: task-add.html  task-detail.html  task-edit.html  task-list.html
apps/theme/: package.json  tailwind.config.js
apps/theme/static/css/: styles.css
apps/theme/static/theme/: styles.css
apps/theme/templates/: 403.html  base.html  base_error.html
apps/theme/templates/includes/: navbar.html
apps/theme/templatetags/: utils.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: __init__.py
config/settings/components/: __init__.py  caches.py  common.py  csp.py  databases.py
config/settings/environments/: development.py  local.py.template  production.py
core/database/: mixins.py  models.py
docker/django/dev/: Dockerfile  env  start.sh
docker/django/production/: Dockerfile  entrypoint.sh  start.sh
docker/frontend/dev/: Dockerfile
